# cmake-utils

./: android.toolchain.cmake  build.sh  cmake_generate_android_gradle  cmake_generate_android_gradle.bat
test/: CMakeLists.txt  exe.c  exe.cpp  test.py
test/jni/: Android.mk
test/neon/: CMakeLists.txt
test/project/: CMakeLists.txt  exe.c
test/project/jni/: Android.mk
test/project/shared/: shared.cpp
test/response_file/: CMakeLists.txt
test/shared/: shared.c  shared.cpp  shared.h  shared.hpp
test/static/: static.c  static.cpp  static.h  static.hpp
